Fixed bugs in HeyzoParsingProfile.java